# uoa2020sg

./: CMakeLists.txt  LICENSE  README.md
model/: BaseA-SupportPlate.body  L-50-2.0-4.0.body  Obstacle-L25.body
project/: SG1L-Capsule.cnoid  SG1L.cnoid  SG1M-Capsule.cnoid  SG1M.cnoid  SG2.cnoid
script/: SG1L-Capsule-DoubleArmV7A.py  SG1L-Capsule-DoubleArmV7S.py  SG1M-Capsule-AizuSpiderSA.py  SG1M-Capsule-AizuSpiderSS.py  SG1M-Capsule-Quadcopter.py  WRSUtil.py  generate-sample-projects.py
wiki/: Home.md
